# RS-Discordbot

./: Cargo.toml
src/: Main.rs
