[package]
name = "RS-DiscordBot"
version = "0.0.1a"
authors = ["Trix <dtwatson443@gmail.com>"]
edition = "2021"

[dependencies]
serenity = { path = "../../", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }